<?xml version="1.0"?>
<package>
  <name>throttle_debug</name>
  <version>0.0.0</version>
  <description>The throttle_debug package</description>
  <maintainer email="kawaharazuka@jsk.imi.i.u-tokyo.ac.jp">Kento Kawaharazuka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
